[package]
name = "tockilator"
version = "0.1.0"
authors = ["Adam H. Leventhal <ahl@oxide.computer>", "Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# riscv-disasm = {git = "https://github.com/laanwj/rust-riscv-disasm" }
disc-v = {path = "../disc-v"}
hex = "0.4.0"
clap = "2.33.0"
goblin = "0.2.0"
rustc-demangle = "0.1.16"
gimli = "0.20.0"
