[package]
name = "tockilator"
version = "0.1.0"
authors = ["Adam H. Leventhal <ahl@oxide.computer>", "Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disc-v = {git = "https://github.com/oxidecomputer/disc-v" }
hex = "0.4.0"
clap = "2.33.0"
goblin = "0.2.0"
rustc-demangle = "0.1.16"
gimli = "0.20.0"
fallible-iterator = "0.2.0"
multimap = "0.8.0"
colored = "1.9"
